--- a/index.html
+++ b/index.html
@@ -94,3 +94,37 @@
     <footer>Content of the <footer> tag</footer>
 </body>
 </html>
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ALX CSS Advanced</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <div class="logo">
+      <img src="images/logo.png" alt="Logo">
+    </div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="banner">
+    <div class="banner-content">
+      <h1>Welcome to Our Page</h1>
+      <p>Experience the best of web design and creativity</p>
+      <button class="btn">Learn More</button>
+    </div>
+    <img src="images/banner.jpg" alt="Banner Image" class="banner-image">
+  </section>
+</body>
+</html>
+
