--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
     </div>
     <img src="images/banner.jpg" alt="Banner Image" class="banner-image">
   </section>
+   <section class="quote">
+  <blockquote>
+    "The best way to predict the future is to create it."
+  </blockquote>
+  <p class="author">- Abraham Lincoln</p>
+</section> 
 </body>
 </html>
 
