--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
                 <source src="promo.mp4" type="video/mp4">
                 Your browser does not support the video tag. Watch our promo video for more details about the event.
             </video>
+            <section class="videos">
+  <h2>Featured Videos</h2>
+  <ul class="video-list">
+    <li>
+      <video controls>
+        <source src="video1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <p>Video Title 1</p>
+    </li>
+    <li>
+      <video controls>
+        <source src="video2.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <p>Video Title 2</p>
+    </li>
+    <li>
+      <video controls>
+        <source src="video3.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <p>Video Title 3</p>
+    </li>
+  </ul>
+</section>
+
         </section>
     </main>
 
