--- a/index.html
+++ b/index.html
@@ -160,4 +160,31 @@
 </section> 
 </body>
 </html>
+        <section class="faq">
+  <h2>Frequently Asked Questions</h2>
+  <div class="faq-item">
+    <h3>What is TechCon 2024?</h3>
+    <p>TechCon 2024 is a premier technology conference bringing together industry leaders, innovators, and enthusiasts.</p>
+  </div>
+  <div class="faq-item">
+    <h3>How can I register?</h3>
+    <p>You can register through our <a href="register.html">registration page</a>.</p>
+  </div>
+  <div class="faq-item">
+    <h3>Where is the conference held?</h3>
+    <p>The conference will be held at the TechCon Convention Center in San Francisco, CA.</p>
+  </div>
+</section>
+        <footer class="site-footer">
+  <div class="footer-content">
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
+    <ul class="social-links">
+      <li><a href="#">Facebook</a></li>
+      <li><a href="#">Twitter</a></li>
+      <li><a href="#">LinkedIn</a></li>
+    </ul>
+  </div>
+</footer>
+
+
 
